# AmazingPlayer

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  conandata.yml
src/: main.cpp
src/Render/: PlayerRender.cpp  PlayerRender.h  TriangleRenderer.cpp  TriangleRenderer.h  TriangleRenderer.md  VAO & VBO.md
